# na-course-planner

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  ruff.toml  vercel.json
.claude/: settings.json
.claude/agents/: na-code-reviewer.md
.claude/hooks/: run_tests.py
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-25T19-07-18-020Z.yml
api/: index.py
data/concentrations/: cs-bs-2024.yaml  cs-bs-2025.yaml
docs/: ARCHITECTURE.md  Graduation Plan.docx  catalog-year-overshoot-findings.md  validation-findings.md
scripts/: gen_architecture.py  generate_favicons.py  generate_og_image.py  pull_schedule.py
src/na_planner/: audit.py  (+19 more)
tests/: conftest.py  test_api_audit.py  test_api_e2e.py  test_api_export.py  test_api_parse.py  test_api_programs.py  test_api_recommend.py  test_audit_allocation.py  test_audit_groups.py  test_busa_program.py  test_capstone_gating.py  test_catalog_linter.py  test_catalog_loader.py  test_concentration_loader.py  test_crjs_program.py  test_cs_gen_ed.py  test_cs_program.py  test_difficulty.py  test_educ_program.py  test_eligibility.py  test_exam_credit_api.py  test_exam_credit_chart.py  test_exam_credit_resolve.py  test_grade_parse.py  test_grades.py  test_ingestion_build.py  test_ingestion_pdf.py  test_models_catalog.py  test_models_schedule.py  test_models_student.py  test_new_programs_roadmap.py  test_offering_filter.py  test_planner.py  test_prereqs.py  test_programs.py  test_recommend_cs.py  test_recommend_timetable.py  test_roadmap.py  test_schedule_csv.py  test_schedule_loader.py  (+7 more)
(+59 files in other folders)
