[project]
name = "na-planner"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pdfplumber>=0.9",
    "fpdf2>=2.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
